DataSource handles gzip compression manually.  Handles compressed and uncompressed source files.